feat: Initial telegram bot

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Что было куплено на мои налоги" />
     <meta property="og:description" content="Попробуйте новый сервис - Что было куплено на Ваши налоги и поделитесь результатом!" />
     <meta property="og:url" content="https://sellus-hackathon.ru/" />
-    <meta property="og:image" content="https://sellus-hackathon.ru/images/Calculator.png" />
+    <meta property="og:image" content="https://sellus-hackathon.ru/images/service.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
